--- a/day.html
+++ b/day.html
@@ -53,7 +53,7 @@
 
     <div class="form-container">
         <h1>Select Timetable</h1>
-        <form id="timetable-form">
+        <form id="timetable-form" inputtype="remember">
             <select name="day" id="day-select" required>
                 <option value="" disabled selected>Select the day</option>
                 <option value="Monday">Monday</option>
@@ -62,7 +62,7 @@
                 <option value="Thursday">Thursday</option>
                 <option value="Friday">Friday</option>
             </select>
-
+           
             <input type="submit" value="View Timetable">
         </form>
     </div>
